--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>オナチンコ‼️！</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="./manifest.json">
+    <link rel="icon" href="favicon.png" type="image/png">
 </head>
     <script>
   if ('serviceWorker' in navigator) {
